ABS: general HTML structure created

--- a/index.html
+++ b/index.html
@@ -9,5 +9,131 @@
   <title>Abstract</title>
 </head>
 <body>
+  <nav>
+    <a href="https://www.goabstract.com/" target="_blank">Abstract</a>
+    <a href="https://help.abstract.com/hc/en-us" target="_blank">Help Center</a>
+    <button>Submit a request</button>
+    <button>Sign in</button>
+  </nav>
+  <header>
+    <h1>How can we help?</h1>
+    <form>
+      <input type="search" name="search" id="search">
+    </form>
+  </header>
+  <main>
+    <div>
+      <div>
+        <img src="#" alt="using-abstract-img">
+        <div>
+          <h2>Using Abstract</h2>
+          <p>
+            Abstract lets you manage, version, and document your designs in one place.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/categories/360005436612-Using-Abstract" target="_blank">Learn More →</a>
+        </div>
+      </div>
+      <div>
+        <img src="#" alt="manage-your-account-img">
+        <div>
+          <h2>Manage your account</h2>
+          <p>
+            Configure your account settings, such as your email, profile details, and password.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/categories/360005449431-Manage-your-account" target="_blank">Learn More →</a>
+        </div>
+      </div>
+      <div>
+        <img src="#" alt="manage-organizations-img">
+        <div>
+          <h2>Manage organizations, teams, and projects</h2>
+          <p>
+            Use Abstract organizations, teams, and projects to organize your people and your work.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/categories/360005449531-Manage-organizations-teams-and-projects" target="_blank">Learn More →</a>
+        </div>
+      </div>
+      <div>
+        <img src="#" alt="manage-billing-img">
+        <div>
+          <h2>Manage billing</h2>
+          <p>
+            Change subscriptions and payment details.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/categories/360005436672-Manage-billing" target="_blank">Learn More →</a>
+        </div>
+      </div>
+      <div>
+        <img src="#" alt="authenticate-to-abstract-img">
+        <div>
+          <h2>Authenticate to Abstract</h2>
+          <p>
+            Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/categories/360005436592-Authenticate-to-Abstract" target="_blank">Learn More →</a>
+        </div>
+      </div>
+      <div>
+        <img src="#" alt="abstract-support-img">
+        <div>
+          <h2>Abstract support</h2>
+          <p>
+            Get in touch with a human.
+          </p>
+          <a href="https://help.abstract.com/hc/en-us/articles/360050382291-Contact-Support" target="_blank">Learn More →</a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div>
+      <div>
+        <h2>Abstract</h2>
+        <ul>
+          <li><a href="https://app.abstract.com/start-branches-trial" target="_blank"></a>Start Trial</li>
+          <li><a href="https://www.abstract.com/pricing" target="_blank"></a>Pricing</li>
+          <li><a href="https://app.abstract.com/download" target="_blank"></a>Download</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Resources</h2>
+        <ul>
+          <li><a href="https://www.abstract.com/blog" target="_blank"></a>Blog</li>
+          <li><a href="https://www.abstract.com/help" target="_blank"></a>Help Center</li>
+          <li><a href="https://www.abstract.com/release-notes" target="_blank"></a>Release Notes</li>
+          <li><a href="https://status.abstract.com/" target="_blank"></a>Status</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Community</h2>
+        <ul>
+          <li><a href="https://twitter.com/goabstract" target="_blank"></a>Twitter</li>
+          <li><a href="https://www.linkedin.com/company/17950473/" target="_blank"></a>LinkedIn</li>
+          <li><a href="https://facebook.com/Abstract/" target="_blank"></a>Facebook</li>
+          <li><a href="https://dribbble.com/abstract" target="_blank"></a>Dribbble</li>
+          <li><a href="https://www.abstract.com/podcast" target="_blank"></a>Podcast</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Company</h2>
+        <ul>
+          <li><a href="https://www.abstract.com/about" target="_blank"></a>About Us</li>
+          <li><a href="https://abstract.breezy.hr/" target="_blank"></a>Careers</li>
+          <li><a href="https://www.abstract.com/legal" target="_blank"></a>Legal</li>
+          <p>Contact Us</p>
+          <li><a href="info@abstract.com" target="_blank"></a>info@abstract.com</li><!--mailto-->
+        </ul>
+      </div>
+      <div>
+        <img src="#" alt="logo-svg">
+        <p>© Copyright 2023</p>
+        <p>Abstract Studio Design, Inc.</p>
+        <p>All rights reserved</p>
+      </div>
+      <div>
+        <button>Help</button><!--falta icono signo pregunta-->
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
