ABS: added flexbox into items and bg color

--- a/index.html
+++ b/index.html
@@ -22,73 +22,73 @@
     </form>
   </header>
   <main>
-    <div>
-      <div>
-        <img src="#" alt="using-abstract-img">
+    <section id="cardsContainer">
+      <div class="card">
+        <img src="./imgs/using-abstract.png" alt="using-abstract-img">
         <div>
-          <h2>Using Abstract</h2>
+          <h4>Using Abstract</h4>
           <p>
             Abstract lets you manage, version, and document your designs in one place.
           </p>
           <a href="https://help.abstract.com/hc/en-us/categories/360005436612-Using-Abstract" target="_blank">Learn More →</a>
         </div>
       </div>
-      <div>
-        <img src="#" alt="manage-your-account-img">
+      <div class="card">
+        <img src="./imgs/manage-your-account.png" alt="manage-your-account-img">
         <div>
-          <h2>Manage your account</h2>
+          <h4>Manage your account</h4>
           <p>
             Configure your account settings, such as your email, profile details, and password.
           </p>
           <a href="https://help.abstract.com/hc/en-us/categories/360005449431-Manage-your-account" target="_blank">Learn More →</a>
         </div>
       </div>
-      <div>
-        <img src="#" alt="manage-organizations-img">
+      <div class="card">
+        <img src="./imgs/manage-organizations.png" alt="manage-organizations-img">
         <div>
-          <h2>Manage organizations, teams, and projects</h2>
+          <h4>Manage organizations, teams, and projects</h4>
           <p>
             Use Abstract organizations, teams, and projects to organize your people and your work.
           </p>
           <a href="https://help.abstract.com/hc/en-us/categories/360005449531-Manage-organizations-teams-and-projects" target="_blank">Learn More →</a>
         </div>
       </div>
-      <div>
-        <img src="#" alt="manage-billing-img">
+      <div class="card">
+        <img src="./imgs/manage-billing.png" alt="manage-billing-img">
         <div>
-          <h2>Manage billing</h2>
+          <h4>Manage billing</h4>
           <p>
             Change subscriptions and payment details.
           </p>
           <a href="https://help.abstract.com/hc/en-us/categories/360005436672-Manage-billing" target="_blank">Learn More →</a>
         </div>
       </div>
-      <div>
-        <img src="#" alt="authenticate-to-abstract-img">
+      <div class="card">
+        <img src="./imgs/authenticate-to-abstract.png" alt="authenticate-to-abstract-img">
         <div>
-          <h2>Authenticate to Abstract</h2>
+          <h4>Authenticate to Abstract</h4>
           <p>
             Set up and configure SSO, SCIM, and Just-in-Time provisioning.
           </p>
           <a href="https://help.abstract.com/hc/en-us/categories/360005436592-Authenticate-to-Abstract" target="_blank">Learn More →</a>
         </div>
       </div>
-      <div>
-        <img src="#" alt="abstract-support-img">
+      <div class="card">
+        <img src="./imgs/abstract-support.png" alt="abstract-support-img">
         <div>
-          <h2>Abstract support</h2>
+          <h4>Abstract support</h4>
           <p>
             Get in touch with a human.
           </p>
           <a href="https://help.abstract.com/hc/en-us/articles/360050382291-Contact-Support" target="_blank">Learn More →</a>
         </div>
       </div>
-    </div>
+    </section>
   </main>
   <footer>
-    <div>
+    <div id="footerContainer">
       <div>
-        <h2>Abstract</h2>
+        <h3>Abstract</h3>
         <ul>
           <li><a href="https://app.abstract.com/start-branches-trial" target="_blank"></a>Start Trial</li>
           <li><a href="https://www.abstract.com/pricing" target="_blank"></a>Pricing</li>
@@ -96,7 +96,7 @@
         </ul>
       </div>
       <div>
-        <h2>Resources</h2>
+        <h3>Resources</h3>
         <ul>
           <li><a href="https://www.abstract.com/blog" target="_blank"></a>Blog</li>
           <li><a href="https://www.abstract.com/help" target="_blank"></a>Help Center</li>
@@ -105,7 +105,7 @@
         </ul>
       </div>
       <div>
-        <h2>Community</h2>
+        <h3>Community</h3>
         <ul>
           <li><a href="https://twitter.com/goabstract" target="_blank"></a>Twitter</li>
           <li><a href="https://www.linkedin.com/company/17950473/" target="_blank"></a>LinkedIn</li>
@@ -115,7 +115,7 @@
         </ul>
       </div>
       <div>
-        <h2>Company</h2>
+        <h3>Company</h3>
         <ul>
           <li><a href="https://www.abstract.com/about" target="_blank"></a>About Us</li>
           <li><a href="https://abstract.breezy.hr/" target="_blank"></a>Careers</li>
