ABS: svg logo added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav>
-    <a href="https://www.goabstract.com/" target="_blank">Abstract</a>
+    <img src="./imgs/abstract-logo.svg" alt=""><a href="https://www.goabstract.com/" target="_blank">Abstract</a>
     <a href="https://help.abstract.com/hc/en-us" target="_blank">Help Center</a>
     <button>Submit a request</button>
     <button>Sign in</button>
@@ -125,7 +125,7 @@
         </ul>
       </div>
       <div>
-        <img src="#" alt="logo-svg">
+        <img src="./imgs/abstract-logo.svg" alt="logo-svg">
         <p>© Copyright 2023</p>
         <p>Abstract Studio Design, Inc.</p>
         <p>All rights reserved</p>
