--- a/index.html
+++ b/index.html
@@ -110,49 +110,54 @@
       <div>
         <h3>Abstract</h3>
         <ul>
-          <li><a href="https://app.abstract.com/start-branches-trial" target="_blank"></a>Start Trial</li>
-          <li><a href="https://www.abstract.com/pricing" target="_blank"></a>Pricing</li>
-          <li><a href="https://app.abstract.com/download" target="_blank"></a>Download</li>
+          <li><a href="https://app.abstract.com/start-branches-trial" target="_blank">Start Trial</a></li>
+          <li><a href="https://www.abstract.com/pricing" target="_blank">Pricing</a></li>
+          <li><a href="https://app.abstract.com/download" target="_blank">Download</a></li>
         </ul>
       </div>
       <div>
         <h3>Resources</h3>
         <ul>
-          <li><a href="https://www.abstract.com/blog" target="_blank"></a>Blog</li>
-          <li><a href="https://www.abstract.com/help" target="_blank"></a>Help Center</li>
-          <li><a href="https://www.abstract.com/release-notes" target="_blank"></a>Release Notes</li>
-          <li><a href="https://status.abstract.com/" target="_blank"></a>Status</li>
+          <li><a href="https://www.abstract.com/blog" target="_blank">Blog</a></li>
+          <li><a href="https://www.abstract.com/help" target="_blank">Help Center</a></li>
+          <li><a href="https://www.abstract.com/release-notes" target="_blank">Release Notes</a></li>
+          <li><a href="https://status.abstract.com/" target="_blank">Status</a></li>
         </ul>
       </div>
       <div>
         <h3>Community</h3>
         <ul>
-          <li><a href="https://twitter.com/goabstract" target="_blank"></a>Twitter</li>
-          <li><a href="https://www.linkedin.com/company/17950473/" target="_blank"></a>LinkedIn</li>
-          <li><a href="https://facebook.com/Abstract/" target="_blank"></a>Facebook</li>
-          <li><a href="https://dribbble.com/abstract" target="_blank"></a>Dribbble</li>
-          <li><a href="https://www.abstract.com/podcast" target="_blank"></a>Podcast</li>
+          <li><a href="https://twitter.com/goabstract" target="_blank">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/company/17950473/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://facebook.com/Abstract/" target="_blank">Facebook</a></li>
+          <li><a href="https://dribbble.com/abstract" target="_blank">Dribbble</a></li>
+          <li><a href="https://www.abstract.com/podcast" target="_blank">Podcast</a></li>
         </ul>
       </div>
       <div>
         <h3>Company</h3>
         <ul>
-          <li><a href="https://www.abstract.com/about" target="_blank"></a>About Us</li>
-          <li><a href="https://abstract.breezy.hr/" target="_blank"></a>Careers</li>
-          <li><a href="https://www.abstract.com/legal" target="_blank"></a>Legal</li>
-          <p>Contact Us</p>
-          <li><a href="info@abstract.com" target="_blank"></a>info@abstract.com</li><!--mailto-->
+          <li><a href="https://www.abstract.com/about" target="_blank">About Us</a></li>
+          <li><a href="https://abstract.breezy.hr/" target="_blank">Careers</a></li>
+          <li><a href="https://www.abstract.com/legal" target="_blank">Legal</a></li>
+          <p id="contactUsTitle">Contact Us</p>
+          <li><a href="info@abstract.com" target="_blank">info@abstract.com</a></li><!--mailto-->
         </ul>
       </div>
       <div>
-        <img class="logoSvg" src="./imgs/abstract-logo.svg" alt="logo-svg">
+        <img class="logoSvg" id="logoSvgFooter" src="./imgs/abstract-logo.svg" alt="logo-svg">
         <p>© Copyright 2023</p>
         <p>Abstract Studio Design, Inc.</p>
         <p>All rights reserved</p>
       </div>
-      <div>
-        <button>Help</button><!--falta icono signo pregunta-->
-      </div>
+    </div>
+    <div id="helpBtnContainer">
+      <button>Help</button>
+      <svg id="questionSvg" width="20" height="20" viewBox="0 0 20 20" aria-hidden="true">
+        <g id="Layer_4"><path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path><circle cx="10" cy="15" r="1"></circle>
+          <path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path>
+        </g>
+      </svg><!--falta icono signo pregunta-->
     </div>
   </footer>
 </body>
